# RivalSearchMCP

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  START_AGENT_SYSTEM.sh  SYSTEM_COMPLETE.md  fastmcp.json  opencode.json  pyproject.toml  pytest.ini  requirements.txt  server.py
.github/workflows/: ci-cd.yml  ci.yml  claude-code-review.yml  claude-documentation.yml  claude-security-scan.yml  claude-test-fixer.yml
.opencode/: README.md
.opencode/agent/: code-reviewer.md  mcp-developer.md  performance-specialist.md  testing-specialist.md  tool-developer.md
.opencode/skill/api-rate-limiting/: SKILL.md
.opencode/skill/mcp-tool-development/: SKILL.md
.opencode/skill/performance-optimization/: SKILL.md
.opencode/skill/testing-patterns/: SKILL.md
Users/damionrashford/RivalSearchMCP/: opencode.json
docs/: CNAME  index.html  llms.txt  robots.txt  sitemap.xml  usage.md
docs-site/: README.md  index.html  package-lock.json  package.json  vite.config.ts
docs-site/.github/workflows/: deploy.yml
docs-site/public/: 404.html
docs-site/src/: App.tsx  main.tsx
docs-site/src/components/home/: BeforeAfter.tsx  Hero.tsx  QuickSetup.tsx  ToolsGrid.tsx
docs-site/src/components/layout/: Footer.tsx  Layout.tsx  Navbar.tsx  Sidebar.tsx
docs-site/src/components/ui/: Badge.tsx  Button.tsx  Callout.tsx  CodeBlock.tsx  Table.tsx  ToolCard.tsx
docs-site/src/pages/: Examples.tsx  GettingStarted.tsx  Home.tsx  ToolDetail.tsx  Tools.tsx  UserGuide.tsx
docs-site/src/styles/: app.css
docs/developer-guide/: architecture.md
docs/ui/: index.html  llms.txt  package.json  robots.txt  sitemap.xml
docs/ui/assets/: index-DyxumdZV.css  index-XiUKjVE4.js
docs/ui/public/: llms.txt  robots.txt  sitemap.xml
docs/ui/src/: App.tsx  index.css
docs/ui/src/hooks/: useInView.ts  useTypewriter.ts
docs/ui/src/sections/: CallToAction.tsx  FAQ.tsx  Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Integrations.tsx  Navigation.tsx  Stats.tsx
docs/user-guide/: web-search.md
rival-search/: .mcp.json  README.md
rival-search/.claude-plugin/: plugin.json
rival-search/agents/: competitive-intel.md  research-analyst.md
rival-search/skills/academic-research/: SKILL.md
rival-search/skills/competitor-analysis/: SKILL.md
rival-search/skills/deep-research/: SKILL.md
rival-search/skills/market-intel/: SKILL.md
rival-search/skills/site-audit/: SKILL.md
skills/rival-search-mcp/: SKILL.md
skills/rival-search-mcp/resources/: content.md  research.md  search.md
skills/rival-search-mcp/scripts/: cli.py
src/: prompts.py
src/config/: __init__.py  archives.py  environment.py  paywall.py  user_agents.py
src/core/: __init__.py
src/core/bypass/: __init__.py
src/core/cache/: __init__.py  cache_manager.py
src/core/conflict/: __init__.py  detect.py
src/core/content/: __init__.py  cleaners.py  extractors.py  parsers.py
src/core/fetch/: __init__.py  base.py  batch.py  enhanced.py
src/core/github_api/: __init__.py  search.py
src/core/llms/: generator.py
src/core/llms/modules/: content_processor.py  file_writer.py  page_processor.py
src/core/memory/: __init__.py  sessions.py
src/core/metrics/: metrics.py
src/core/news/: __init__.py  aggregator.py
src/core/pdf/: __init__.py  analyzer.py
src/core/quality/: __init__.py  score.py
src/core/scientific/: __init__.py  academic_search.py
src/core/scientific/datasets/: orchestrator.py
src/core/scientific/datasets/providers/: dataverse.py  huggingface.py  kaggle.py  zenodo.py
src/core/scientific/search/: orchestrator.py
src/core/scientific/search/providers/: arxiv.py  crossref.py  europepmc.py  openalex.py  pubmed.py  semantic_scholar.py
src/core/search/: __init__.py
src/core/search/core/: __init__.py  engine.py  main.py  multi_engines.py
src/core/search/engines/: __init__.py
src/core/search/engines/bing/: __init__.py  bing_engine.py
src/core/search/engines/duckduckgo/: __init__.py  duckduckgo_engine.py
src/core/search/engines/mojeek/: __init__.py  mojeek_engine.py
src/core/search/engines/wikipedia/: __init__.py  wikipedia_engine.py
src/core/search/engines/yahoo/: __init__.py  yahoo_engine.py
src/core/search/models/: __init__.py
src/core/search/parsers/: parser.py
src/core/security/: __init__.py  security.py
src/core/social/: __init__.py  bluesky.py  devto.py  hackernews.py  lemmy.py  lobsters.py  medium.py  producthunt.py  reddit.py  stackoverflow.py
src/core/traverse/: __init__.py  core.py  specialized.py
src/core/trends/: api.py
src/core/trends/modules/: client.py  search.py
src/error/: fallback.py
src/logging/: __init__.py  logger.py
src/middleware/: __init__.py  cors_validation.py  middleware.py  null_id_validation.py
src/performance/: __init__.py  performance.py
src/prompts/: prompts.py
src/resources/: resources.py
src/routes/: __init__.py  pagination.py  routes.py  server.py
src/schemas/: __init__.py  web.py
src/tools/: __init__.py  analysis.py  conflict.py  entity.py  github_tool.py  memory.py  multi_search.py  news.py  pdf_tool.py  quality.py  research.py  scientific.py  search.py  social_media.py  traversal.py  trends.py
src/tools/research_modules/: ai_model_selector.py  research_synthesis.py  research_workflow.py
src/utils/: __init__.py  agents.py  clients.py  content.py  headers.py  markdown_formatter.py  scrapling_client.py
tests/: .gitignore  CLAUDE.md  browser_client.html  client_demo.py  conftest.py  mcp_client.py  param_test_runner.py  param_test_web_search.md  run.py  run_tests_with_logging.py  simple_test.py  test_all_tools_comprehensive.py  test_cors_validation.py  test_inmemory_transport.py  test_logging.py  test_null_id_validation.py  test_rival_search_mcp.py
tests/tools/: __init__.py  test_content_operations.py  test_document_analysis.py  test_github_search.py  test_map_website.py  test_news_aggregation.py  test_research_agent.py  test_research_topic.py  test_scientific_research.py  test_social_search.py  test_web_search.py
